--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Individuals who want to learn and are not easy to feel enough about the knowledg
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-anchor-line" style="color: #b2904f;"></i>
-            <h3>Dirada Pack</h3>
+            <h3>Test</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
