--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ Individuals who want to learn and are not easy to feel enough about the knowledg
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-              <h3>Saul Goodman</h3>
+              <h3>Sunny Mahiyatal Aliyah</h3>
               <h4>Ceo &amp; Founder</h4>
             </div>
           </div><!-- End testimonial item -->
@@ -331,7 +331,7 @@ Individuals who want to learn and are not easy to feel enough about the knowledg
                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-              <h3>Sara Wilsson</h3>
+              <h3>Anisa Nur Safitri</h3>
               <h4>Designer</h4>
             </div>
           </div><!-- End testimonial item -->
@@ -343,7 +343,7 @@ Individuals who want to learn and are not easy to feel enough about the knowledg
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-              <h3>Jena Karlis</h3>
+              <h3>Gana Purba Kusuma</h3>
               <h4>Store Owner</h4>
             </div>
           </div><!-- End testimonial item -->
@@ -355,7 +355,7 @@ Individuals who want to learn and are not easy to feel enough about the knowledg
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-              <h3>Matt Brandon</h3>
+              <h3>Yusuf Yudha Sabrian</h3>
               <h4>Freelancer</h4>
             </div>
           </div><!-- End testimonial item -->
@@ -367,7 +367,7 @@ Individuals who want to learn and are not easy to feel enough about the knowledg
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-              <h3>John Larson</h3>
+              <h3>Rendi Dwi Setiawan</h3>
               <h4>Entrepreneur</h4>
             </div>
           </div><!-- End testimonial item -->
