--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   // TODO: Ganti konfigurasi
  const firebaseConfig = {
   apiKey: "AIzaSyCK41p3Ufc-KFTMGhdzwSKbxDiWP2enjc0",
-  authDomain: "gerbang-61ad4.firebaseapp.com",
+  authDomain: "gerbang-61ad4.web.app",
   databaseURL: "https://gerbang-61ad4-default-rtdb.asia-southeast1.firebasedatabase.app",
   projectId: "gerbang-61ad4",
   storageBucket: "gerbang-61ad4.firebasestorage.app",
