--- a/index.html
+++ b/index.html
@@ -2,42 +2,51 @@
 <html lang="id">
 <head>
   <meta charset="utf-8">
-  <title>Dashboard Akses Gerbang RFID (Realtime)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Admin Kartu RFID</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    @media print { .no-print { display:none; } }
-    body { background:#f7f7f7; }
-  </style>
+  <style>@media print { .no-print{display:none;} }</style>
 </head>
-<body>
+<body class="bg-light">
 <div class="container py-4">
-  <div class="d-flex align-items-center justify-content-between mb-3">
-    <h3 class="m-0">📊 Log Akses Gerbang RFID (Realtime)</h3>
-    <div class="no-print">
-      <input id="searchInput" class="form-control" style="width:220px" placeholder="Cari UID / Pemilik / Gate">
-    </div>
-  </div>
-
-  <div class="mb-3 no-print d-flex gap-2">
-    <button class="btn btn-success" onclick="window.print()">🖨 Cetak</button>
-    <button class="btn btn-warning" onclick="exportCSV()">📂 Export CSV</button>
-    <span id="statusBadge" class="badge text-bg-secondary align-self-center">Menghubungkan...</span>
+  <div class="d-flex justify-content-between align-items-center mb-3">
+    <h3 class="m-0">🔐 Admin Kartu RFID</h3>
+    <div id="authArea" class="no-print"></div>
+    
   </div>
 
   <div class="card shadow-sm">
-    <div class="card-body p-0">
-      <div class="table-responsive">
-        <table class="table table-striped table-hover m-0" id="logTable">
+    <div class="card-body">
+      <form id="cardForm" class="row g-2 no-print">
+        <div class="col-md-4">
+          <input required id="uid" class="form-control" placeholder="UID (contoh: AA BB CC DD)">
+        </div>
+        <div class="col-md-4">
+          <input required id="owner" class="form-control" placeholder="Nama Pemilik">
+        </div>
+        <div class="col-md-2 form-check d-flex align-items-center ms-2">
+          <input class="form-check-input" type="checkbox" id="active" checked>
+          <label class="form-check-label ms-2" for="active">Aktif</label>
+        </div>
+        <div class="col-md-2 d-grid">
+          <button class="btn btn-primary" type="submit">Simpan/Update</button>
+        </div>
+      </form>
+
+      <div class="d-flex gap-2 mt-3 no-print">
+        <input id="search" class="form-control" style="max-width:260px" placeholder="Cari UID / Pemilik">
+        <button class="btn btn-success" onclick="window.print()">🖨️ Cetak</button>
+      </div>
+
+      <div class="table-responsive mt-3">
+        <table class="table table-striped table-hover">
           <thead class="table-dark">
             <tr>
               <th>#</th>
-              <th>Waktu</th>
               <th>UID</th>
               <th>Pemilik</th>
-              <th>Gate</th>
-              <th>Status</th>
-              <th>kartu</th>
+              <th>Aktif</th>
+              <th class="no-print">Aksi</th>
             </tr>
           </thead>
           <tbody id="tbody"></tbody>
@@ -45,17 +54,18 @@
       </div>
     </div>
   </div>
+  <button><a href="index2.html">log kartu</a></button>
 </div>
 
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-  import { getDatabase, ref, onChildAdded, get, child, query, limitToLast, orderByKey } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
-  import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+  import { getDatabase, ref, onValue, update, remove } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+  import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
 
   // TODO: Ganti konfigurasi
  const firebaseConfig = {
   apiKey: "AIzaSyCK41p3Ufc-KFTMGhdzwSKbxDiWP2enjc0",
-  authDomain: "gerbang-61ad4.web.app",
+  authDomain: "gerbang-61ad4.firebaseapp.com",
   databaseURL: "https://gerbang-61ad4-default-rtdb.asia-southeast1.firebasedatabase.app",
   projectId: "gerbang-61ad4",
   storageBucket: "gerbang-61ad4.firebasestorage.app",
@@ -63,121 +73,104 @@
   appId: "1:130881959289:web:a4c68dbef6067c90aaeba8",
   measurementId: "G-311S91E2HM"
 };
-
   const app = initializeApp(firebaseConfig);
   const db = getDatabase(app);
   const auth = getAuth(app);
 
   const tbody = document.getElementById('tbody');
-  const statusBadge = document.getElementById('statusBadge');
-  const searchInput = document.getElementById('searchInput');
+  const form = document.getElementById('cardForm');
+  const uidEl = document.getElementById('uid');
+  const ownerEl = document.getElementById('owner');
+  const activeEl = document.getElementById('active');
+  const searchEl = document.getElementById('search');
+  const authArea = document.getElementById('authArea');
 
-  // cache pemilik kartu
-  const cardCache = new Map();
-  let rowCount = 0;
-
-  function fmtTime(ts) {
-    // Jika ts adalah epoch millis, render lokal time
-    // Kalau tidak ada ts, pakai Date.now()
-    const d = ts ? new Date(ts) : new Date();
-    return d.toLocaleString();
+  function renderLogin() {
+    authArea.innerHTML = `
+      <form id="loginForm" class="d-flex gap-2">
+        <input required type="email" id="email" class="form-control" placeholder="Email admin">
+        <input required type="password" id="password" class="form-control" placeholder="Password">
+        <button class="btn btn-primary" type="submit">Login</button>
+      </form>`;
+    document.getElementById('loginForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value;
+      try { await signInWithEmailAndPassword(auth, email, password); }
+      catch (err) { alert('Login gagal: ' + err.message); }
+    });
   }
 
-  function matchesFilter(row) {
-    const q = (searchInput.value || "").toLowerCase();
-    if (!q) return true;
-    return (
-      row.uid.toLowerCase().includes(q) ||
-      (row.owner || "").toLowerCase().includes(q) ||
-      (row.gateId || "").toLowerCase().includes(q) ||
-      (row.status || "").toLowerCase().includes(q) ||
-      (row.kartu || "").toLowerCase().includes(q)
-    );
+  function renderLogout(user) {
+    authArea.innerHTML = `
+      <div class="d-flex align-items-center gap-2">
+        <span>Masuk sebagai <strong>${user.email}</strong></span>
+        <button class="btn btn-outline-danger btn-sm" id="logoutBtn">Logout</button>
+      </div>`;
+    document.getElementById('logoutBtn').onclick = () => signOut(auth);
   }
 
-  function renderRow(row) {
-    if (!matchesFilter(row)) return;
+  function normUID(s){ return s.trim().toUpperCase().replace(/\s+/g,' '); }
 
-    const tr = document.createElement('tr');
-    tr.innerHTML = `
-      <td>${++rowCount}</td>
-      <td>${fmtTime(row.ts)}</td>
-      <td>${row.uid || ""}</td>
-      <td>${row.owner || ""}</td>
-      <td>${row.gateId || ""}</td>
-      <td>${row.status || ""}</td>
-      <td>${row.kartu || ""}</td>
-    `;
-    tbody.prepend(tr); // terbaru di atas
+  function rowMatchesFilter(row, q){
+    if (!q) return true; q = q.toLowerCase();
+    return row.uid.toLowerCase().includes(q) || (row.owner||'').toLowerCase().includes(q);
   }
 
-  async function resolveOwner(uid) {
-    if (cardCache.has(uid)) return cardCache.get(uid);
-    const snap = await get(child(ref(db), cards/${uid}/owner));
-    const owner = snap.exists() ? snap.val() : "";
-    cardCache.set(uid, owner);
-    return owner;
+  function drawTable(cards){
+    const q = (searchEl.value||'').trim();
+    tbody.innerHTML = '';
+    let i = 0;
+    Object.keys(cards).sort().forEach(uid => {
+      const row = { uid, owner: cards[uid].owner||'', active: !!cards[uid].active };
+      if (!rowMatchesFilter(row, q)) return;
+      const tr = document.createElement('tr');
+      tr.innerHTML = `
+        <td>${++i}</td>
+        <td>${uid}</td>
+        <td>${row.owner}</td>
+        <td>${row.active ? 'Ya' : 'Tidak'}</td>
+        <td class="no-print">
+          <button class="btn btn-sm btn-outline-primary me-1" data-act="edit" data-uid="${uid}">Edit</button>
+          <button class="btn btn-sm btn-outline-danger" data-act="del" data-uid="${uid}">Hapus</button>
+        </td>`;
+      tbody.appendChild(tr);
+    });
   }
 
-  // Auth anonim lalu subscribe log terakhir (mis. 200 terakhir)
-  signInAnonymously(auth).catch(console.error);
+  let cardsCache = {};
+  onValue(ref(db, 'cards'), (snap)=>{
+    cardsCache = snap.val() || {};
+    drawTable(cardsCache);
+  });
 
-  onAuthStateChanged(auth, (user) => {
-    if (user) {
-      statusBadge.className = "badge text-bg-success";
-      statusBadge.textContent = "Tersambung";
-      const logsRef = query(ref(db, "accessLogs"), orderByKey(), limitToLast(200));
-      onChildAdded(logsRef, async (snap) => {
-        const data = snap.val() || {};
-        if (!data.owner && data.uid) {
-          data.owner = await resolveOwner(data.uid);
-        }
-        renderRow(data);
-      });
-    } else {
-      statusBadge.className = "badge text-bg-secondary";
-      statusBadge.textContent = "Terputus";
+  tbody.addEventListener('click', (e)=>{
+    const btn = e.target.closest('button'); if(!btn) return;
+    const act = btn.dataset.act; const uid = btn.dataset.uid;
+    if (act === 'edit') {
+      const c = cardsCache[uid];
+      uidEl.value = uid; ownerEl.value = (c && c.owner) || ''; activeEl.checked = !!(c && c.active);
+      uidEl.focus();
+    } else if (act === 'del') {
+      if (confirm('Hapus kartu '+uid+'?')) remove(ref(db, 'cards/'+uid));
     }
   });
 
-  // Filter realtime
-  searchInput.addEventListener('input', () => {
-    // re-render cepat: rebuild tbody dari cache DOM sederhana
-    const rows = Array.from(tbody.querySelectorAll('tr')).reverse(); // kronologi
-    tbody.innerHTML = "";
-    rowCount = 0;
-    rows.forEach(tr => {
-      const cols = tr.querySelectorAll('td');
-      const row = {
-        ts: new Date(cols[1].textContent).getTime(),
-        uid: cols[2].textContent,
-        owner: cols[3].textContent,
-        gateId: cols[4].textContent,
-        status: cols[5].textContent,
-       kartu: cols[6].textContent
-      };
-      if (matchesFilter(row)) {
-        const tr2 = document.createElement('tr');
-        tr2.innerHTML = tr.innerHTML.replace(/^<td>\d+<\/td>/, <td>${++rowCount}</td>);
-        tbody.prepend(tr2);
-      }
-    });
+  form.addEventListener('submit', async (e)=>{
+    e.preventDefault();
+    const uid = normUID(uidEl.value);
+    const owner = ownerEl.value.trim();
+    const active = activeEl.checked;
+    if (!uid || !owner) return alert('UID dan Pemilik wajib diisi');
+    try {
+      await update(ref(db, 'cards/'+uid), { owner, active });
+      uidEl.value = ''; ownerEl.value = ''; activeEl.checked = true;
+    } catch(err){ alert('Gagal simpan: '+err.message); }
   });
 
-  // Export CSV
-  window.exportCSV = function() {
-    const rows = [["No","Waktu","UID","Pemilik","Gate","Status","kartu"]];
-    Array.from(tbody.querySelectorAll('tr')).forEach((tr, i) => {
-      const tds = tr.querySelectorAll('td');
-      rows.push([i+1, tds[1].textContent, tds[2].textContent, tds[3].textContent, tds[4].textContent, tds[5].textContent, tds[6].textContent]);
-    });
-    const csv = rows.map(r => r.map(v => "${String(v).replace(/"/g,'""')}").join(",")).join("\n");
-    const blob = new Blob([csv], {type: "text/csv"});
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement('a');
-    a.href = url; a.download = "log_akses.csv"; a.click();
-    URL.revokeObjectURL(url);
-  }
+  searchEl.addEventListener('input', ()=> drawTable(cardsCache));
+
+  onAuthStateChanged(auth, user => { user ? renderLogout(user) : renderLogin(); });
 </script>
 </body>
 </html>
